# CNN

./: .CMakeLists.txt.swp  .gitignore  .ycm_extra_conf.py  CMakeLists.txt  README.md  convl_1_yesB_W.txt  run_Train_CNN.sh  scribble.py
src/: CMakeLists.txt
src/convolution/: .convolution.hpp.swo  .convolution.hpp.swp  .convolution2.hpp.swp  :w  CMakeLists.txt  README.md  convolution.hpp  convolution2.hpp
src/model/: .train.cpp.swp  :w  CMakeLists.txt  README.md  train.cpp
src/test/: .main.cpp.swp  .testcereal.cpp.swp  .testlib2.cpp.swp  CMakeLists.txt  README.md  main.cpp  testcereal.cpp  testlib.cpp  testlib2.cpp
